# hexagonal-todos

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
driven_adapters/recipients/: __init__.py
driven_adapters/repositories/: __init__.py
driven_adapters/tests/: tiny_db_todo_repository_spec.py
driving_adapters/tests/: hexagonal-todos_spec.py  hexagonal_todos_spec.py
driving_adapters/web/: app.py
driving_adapters/web/templates/: index.html  login.html
hexagon/: __init__.py  models.py
hexagon/driven_ports/recipients/: __init__.py
hexagon/driven_ports/repositories/: __init__.py
